oop-four-pillars/force-app/main/default/objects/TripReport__c/TripReport__c.object-meta.xml
<CustomObject>
    <description>Used in DEX601 Programming Lightning Components exercises.</description>
    <label>Trip Report</label>
    <nameField>
        <label>Trip Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>