oop-four-pillars/force-app/main/default/objects/TripReport__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trip_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>