oop-four-pillars/force-app/main/default/objects/TripReport__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>